# acapy-vc-authn-oidc

./: .gitignore  README.md  SECURITY.md  index.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: chart_release.yaml  codeql.yml  controller_unittests.yml  e2e.yml  on_push_main.yaml  on_push_main.yml  on_release.yaml  on_release.yml  publish-agent.yml  publish.yml
charts/vc-authn-oidc/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/vc-authn-oidc/charts/: acapy-0.1.6.tgz  mongodb-16.4.1.tgz
charts/vc-authn-oidc/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  networkpolicy-agent.yaml
demo/nuxt/: Dockerfile  README.md  docker-compose.yaml  nuxt.config.ts  package-lock.json  package.json
demo/nuxt/app/: error.vue
demo/nuxt/app/assets/css/: main.css
demo/nuxt/app/components/: OWFFooter.vue  OWFHeader.vue
demo/nuxt/app/layouts/: default.vue
demo/nuxt/app/pages/: dashboard.vue  index.vue
demo/nuxt/server/api/: hello.get.ts
demo/nuxt/server/api/secure/: profile.get.ts
demo/vue/: Dockerfile  docker-compose.yaml
demo/vue/app/: eslint.config.js  package-lock.json  package.json
demo/vue/app/frontend/: package-lock.json  package.json
demo/vue/app/frontend/src/components/base/: BaseAuthButton.vue
demo/vue/app/frontend/src/plugins/: keycloak.js
demo/vue/app/frontend/src/router/: index.js
demo/vue/app/frontend/src/store/modules/: auth.js
demo/vue/app/frontend/src/views/: Secure.vue
demo/vue/app/src/components/: keycloak.js
docker/: .env.example  docker-compose-e2e.yaml  docker-compose-issuer.yaml  docker-compose-ngrok.yaml  docker-compose.yaml  manage  ngrok.yml
docker/aca-py/: Dockerfile
docker/agent/: Dockerfile
docker/agent/config/: plugin-config.yaml
docker/keycloak/config/: keycloak_import.json
docker/nginx/: nginx.conf
docker/oidc-controller/: Dockerfile  Dockerfile.test
docker/oidc-controller/config/templates/assets/js/: mobile.js
docs/: ConfigurationGuide.md  MigrationGuide.md  ProverRoleLogging.md  README.md
html-templates/: ver_config_explorer.html  verified_credentials.html  wallet_howto.html
html-templates/assets/css/: custom.css
html-templates/assets/js/: my-ua-parser.min.js
oidc-controller/: conftest.py  pytest.ini  tox.ini
oidc-controller/api/: __init__.py  logconf.json  main.py
oidc-controller/api/authSessions/: crud.py  models.py
oidc-controller/api/authSessions/tests/: __init__.py  test_crud.py  test_models.py
oidc-controller/api/clientConfigurations/: crud.py  router.py
oidc-controller/api/clientConfigurations/tests/: test_cc_crud.py
oidc-controller/api/core/: auth.py  config.py  http_exception_util.py  logger_util.py  models.py  redis_utils.py  siam_audit.py  siem_audit.py  webhook_utils.py
oidc-controller/api/core/acapy/: client.py  config.py  models.py  out_of_band.py  present_proof_presentation.py
oidc-controller/api/core/acapy/tests/: test_client.py  test_client_cleanup.py  test_config.py
oidc-controller/api/core/oidc/: issue_token_service.py  provider.py
oidc-controller/api/core/oidc/tests/: __mocks__.py  test_issue_token_service.py  test_provider.py
oidc-controller/api/core/tests/: test_config_coverage.py  test_core_config.py  test_http_exception_util.py  test_logger_util.py  test_models.py  test_redis_utils.py  test_siam_audit.py  test_siem_audit.py
oidc-controller/api/db/: session.py
oidc-controller/api/db/migrations/: __init__.py  add_missing_proof_status.py
oidc-controller/api/db/migrations/tests/: test_add_missing_proof_status.py
oidc-controller/api/db/tests/: test_session.py
oidc-controller/api/integration_tests/: conftest.py  test_connection_flow.py  test_failure_paths.py  test_oidc_protocol.py  test_oob_flow.py
oidc-controller/api/routers/: acapy_handler.py  cleanup.py  oidc.py  presentation_request.py  socketio.py  sse.py  well_known_oid_config.py
oidc-controller/api/routers/tests/: test_acapy_handler.py  test_acapy_handler_cleanup.py  test_cleanup_router.py  test_oidc_callback.py  test_oidc_subject_identifier.py  test_oidc_token.py  test_redis_fallback.py  test_socketio.py  test_sse.py  test_userinfo.py  test_well_known_oid_config.py
oidc-controller/api/services/: __init__.py  cleanup.py
oidc-controller/api/services/tests/: test_cleanup.py  test_cleanup_integration.py  test_cleanup_nonblocking.py
oidc-controller/api/tests/: test_main_integration.py  test_webhook_registration.py
oidc-controller/api/verificationConfigs/: crud.py  models.py  router.py  variableSubstitutions.py
oidc-controller/api/verificationConfigs/tests/: test_generate_proof_request.py  test_helpers.py  test_router.py  test_variable_substitutions.py  test_vc_crud.py
scripts/: bootstrap-test-holder.py  bootstrap-trusted-verifier.py
tests/e2e/: conftest.py  test_connection_flow.py  test_consistent_identifier.py  test_failure_paths.py  test_multi_pod.py  test_oob_flow.py  test_token_claims.py
tests/e2e/helpers/: aca_py.py  oidc_client.py  sse_client.py
