[project]
name = "acapy-vc-authn-oidc"
version = "0.2.2"
description = "Verifiable Credential Identity Provider for OpenID Connect."
authors = [ { name = "OpenWallet Foundation" } ]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: Apache Software License",
	        "Operating System :: OS Independent",
]
repository = "https://github.com/openwallet-foundation/acapy-vc-authn-oidc"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.116.1"
jinja2 = "^3.1.6"
oic = "^1.7.0"
pymongo = "^4.13.2"
pyop = { version = "^3.4.1", extras = ["redis"] }
python-multipart = "^0.0.20" # required by fastapi to serve/upload files
qrcode = { version = "^8.2", extras = ["pil"]}
structlog = "^25.4.0"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
python-socketio = "^5.13.0" # required to run websockets
redis = "^5.0.0" # required for multi-pod Socket.IO communication
canonicaljson = "^2.0.0" # used to provide unique consistent user identifiers"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
mock = "^5.2.0"
mongomock = "^4.3.0"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest = "^8.4.1"
requests-mock = "^1.12.1"
setuptools = "^80.9.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
testpaths = "oidc-controller"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
pythonVersion = "3.12"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
